# agentes_MsC_CD

./: README.md  main.py  pyproject.toml
notebooks/: importancia_estructura_2.ipynb  langgraph_6.ipynb  llm_vs_agent_1.ipynb  notebook1.ipynb  razonamiento_5.ipynb  tools_3.ipynb  tools_mcp_4.ipynb
src/agentes_maestria_cd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
