[project]
name = "agentes-maestria-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.8",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.12",
]
